multiple lang to download

--- a/QuestDataFlow_v2.ipynb
+++ b/QuestDataFlow_v2.ipynb
@@ -676,18 +676,32 @@
    "source": [
     "# UPDATED: Use real CDN data instead of mock\n",
     "print(\"=== FETCHING REAL VERSION DATA FROM ANKAMA CDN ===\\n\")\n",
+    "lang_to_download = [\"fr\", \"pt\", \"en\", \"es\"]\n",
+    "all_lang_urls = {}\n",
     "\n",
-    "# Build URLs using real CDN data\n",
-    "lang_file_urls = build_download_urls_real(\"pt\", \"prod\")\n",
+    "# Build URLs for all languages\n",
+    "for lang in lang_to_download:\n",
+    "    print(f\"Building URLs for language: {lang}\")\n",
+    "    urls = build_download_urls_real(lang, \"prod\")\n",
+    "    all_lang_urls.update(urls)\n",
+    "    print(f\"✓ Found {len(urls)} files for {lang}\")\n",
     "\n",
-    "print(\"Real CDN URLs constructed:\")\n",
-    "for filename, url in lang_file_urls.items():\n",
-    "    print(f\"  {filename}: {url}\")\n",
+    "print(\"\\nReal CDN URLs constructed:\")\n",
+    "# Print a sample of the URLs\n",
+    "for i, (filename, url) in enumerate(all_lang_urls.items()):\n",
+    "    if i < 5:\n",
+    "        print(f\"  {filename}: {url}\")\n",
+    "    elif i == 5:\n",
+    "        print(f\"  ... and {len(all_lang_urls) - 5} more\")\n",
+    "        break\n",
     "\n",
     "def download_files(urls, dest_folder):\n",
     "    \"\"\"Download files from URLs to destination folder\"\"\"\n",
     "    for filename, url in urls.items():\n",
     "        dest_path = dest_folder / filename\n",
+    "        if dest_path.exists():\n",
+    "            print(f\"✓ {filename} already exists. Skipping download.\")\n",
+    "            continue\n",
     "        try:\n",
     "            print(f\"Downloading {url}...\")\n",
     "            response = requests.get(url, timeout=30)\n",
@@ -701,17 +715,19 @@
     "            dest_path.touch()\n",
     "\n",
     "# Download the real files\n",
-    "print(f\"\\n=== DOWNLOADING {len(lang_file_urls)} FILES ===\")\n",
-    "download_files(lang_file_urls, swf_path)\n",
+    "print(f\"\\n=== DOWNLOADING {len(all_lang_urls)} FILES ===\")\n",
+    "download_files(all_lang_urls, swf_path)\n",
     "\n",
     "print(f\"\\n✓ Download process finished. Files saved to {swf_path}\")\n",
     "\n",
     "# Show what we downloaded\n",
     "downloaded_files = list(swf_path.glob(\"*.swf\"))\n",
     "print(f\"Downloaded {len(downloaded_files)} SWF files:\")\n",
-    "for file in downloaded_files:\n",
+    "for file in downloaded_files[:10]: # Show first 10\n",
     "    size_kb = file.stat().st_size / 1024\n",
-    "    print(f\"  - {file.name} ({size_kb:.1f} KB)\")"
+    "    print(f\"  - {file.name} ({size_kb:.1f} KB)\")\n",
+    "if len(downloaded_files) > 10:\n",
+    "    print(f\"  ... and {len(downloaded_files) - 10} more.\")"
    ]
   },
   {
