fixed hints parsing

--- a/QuestDataFlow_v2.ipynb
+++ b/QuestDataFlow_v2.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "234b9664",
    "metadata": {},
    "outputs": [],
@@ -841,7 +841,7 @@
     "def sanitize_value_segment(value_segment):\n",
     "    \"\"\"\n",
     "    Sanitizes the value segment to ensure valid JSON output.\n",
-    "    Based on JsonLangPartBuilder.SanitizeValueSegment() in C# with enhanced ActionScript handling\n",
+    "    Enhanced to handle ActionScript string concatenations and complex patterns\n",
     "    \"\"\"\n",
     "    if not value_segment:\n",
     "        return value_segment\n",
@@ -852,70 +852,77 @@
     "    \n",
     "    # Handle ActionScript \"new Object()\" references - convert to empty JSON object\n",
     "    if 'new Object()' in value_segment:\n",
-    "        # Replace all instances of \"new Object()\" with \"{}\"\n",
     "        value_segment = value_segment.replace('new Object()', '{}')\n",
     "    \n",
-    "    first_char = value_segment[0] if value_segment else ''\n",
-    "    if first_char not in ['[', '{', \"'\"]:\n",
-    "        return value_segment[:-1] if value_segment.endswith(';') else value_segment\n",
+    "    import re\n",
     "    \n",
-    "    # Build the sanitized output\n",
-    "    result = []\n",
-    "    i = 0\n",
-    "    in_string = first_char == \"'\"\n",
-    "    \n",
-    "    if in_string:\n",
-    "        result.append('\"')  # Convert single quote to double quote\n",
-    "        i = 1\n",
-    "    else:\n",
-    "        result.append(first_char)\n",
-    "        i = 1\n",
-    "    \n",
-    "    length = len(value_segment) - (1 if value_segment.endswith(';') else 0)\n",
-    "    \n",
-    "    while i < length:\n",
-    "        previous_char = value_segment[i - 1] if i > 0 else ''\n",
-    "        current_char = value_segment[i]\n",
-    "        next_char = value_segment[i + 1] if i + 1 < length else ''\n",
+    "    # Handle string concatenation patterns more robustly\n",
+    "    def process_string_concatenations(text):\n",
+    "        # Pattern to find string concatenations like 'text' + '\"' + 'more' + '\"' + ''\n",
+    "        # This handles mixed quote types and empty strings\n",
+    "        pattern = r\"('[^']*'|\\\"[^\\\"]*\\\")(\\s*\\+\\s*('[^']*'|\\\"[^\\\"]*\\\"))+\"\n",
     "        \n",
-    "        if in_string:\n",
-    "            if current_char == '\\\\' and next_char == \"'\":\n",
-    "                # Escaped apostrophe - convert to unescaped\n",
-    "                result.append(\"'\")\n",
-    "                i += 1  # Skip the next character\n",
-    "            elif current_char == \"'\":\n",
-    "                # End of string\n",
-    "                in_string = False\n",
-    "                result.append('\"')\n",
-    "            elif current_char == '\"':\n",
-    "                # Escape double quotes within strings\n",
-    "                result.append('\\\\\"')\n",
-    "            elif ord(current_char) < 32:\n",
-    "                # Escape control characters\n",
-    "                result.append(f'\\\\u{ord(current_char):04x}')\n",
-    "            else:\n",
-    "                result.append(current_char)\n",
-    "        else:\n",
-    "            if current_char == ' ' and previous_char == \"'\" and next_char == '+':\n",
-    "                # Handle string concatenation pattern\n",
-    "                in_string = True\n",
-    "                result[-1] = '\\\\'  # Replace the last quote\n",
-    "                result.append('\"')\n",
-    "                i += 9  # Skip the concatenation pattern\n",
-    "                continue\n",
-    "            elif current_char == ' ':\n",
-    "                # Skip spaces outside strings\n",
-    "                pass\n",
-    "            elif current_char == \"'\":\n",
-    "                # Start of new string\n",
-    "                in_string = True\n",
-    "                result.append('\"')\n",
-    "            else:\n",
-    "                result.append(current_char)\n",
+    "        def replace_concat(match):\n",
+    "            concat_expr = match.group(0)\n",
+    "            # Split by + and extract string contents\n",
+    "            parts = re.split(r'\\s*\\+\\s*', concat_expr)\n",
+    "            combined_content = \"\"\n",
+    "            \n",
+    "            for part in parts:\n",
+    "                part = part.strip()\n",
+    "                if part.startswith(\"'\") and part.endswith(\"'\"):\n",
+    "                    # Extract content from single quotes\n",
+    "                    content = part[1:-1]\n",
+    "                    combined_content += content\n",
+    "                elif part.startswith('\"') and part.endswith('\"'):\n",
+    "                    # Extract content from double quotes\n",
+    "                    content = part[1:-1]\n",
+    "                    combined_content += content\n",
+    "            \n",
+    "            # Return as a properly escaped JSON string\n",
+    "            escaped_content = json.dumps(combined_content, ensure_ascii=False)[1:-1]  # Remove surrounding quotes\n",
+    "            return f'\"{escaped_content}\"'\n",
     "        \n",
-    "        i += 1\n",
+    "        return re.sub(pattern, replace_concat, text)\n",
     "    \n",
-    "    return ''.join(result)\n",
+    "    # Process string concatenations\n",
+    "    value_segment = process_string_concatenations(value_segment)\n",
+    "    \n",
+    "    # Convert remaining single quotes to double quotes for JSON compatibility\n",
+    "    def convert_quotes(text):\n",
+    "        result = []\n",
+    "        i = 0\n",
+    "        while i < len(text):\n",
+    "            char = text[i]\n",
+    "            if char == \"'\" and (i == 0 or text[i-1] != \"\\\\\"):\n",
+    "                # Find the closing quote\n",
+    "                j = i + 1\n",
+    "                while j < len(text) and text[j] != \"'\":\n",
+    "                    if text[j] == '\\\\':  # Skip escaped characters\n",
+    "                        j += 2\n",
+    "                    else:\n",
+    "                        j += 1\n",
+    "                \n",
+    "                if j < len(text):\n",
+    "                    # Extract string content and use JSON to properly escape it\n",
+    "                    string_content = text[i+1:j]\n",
+    "                    # Use json.dumps to properly escape the string, then extract content\n",
+    "                    escaped_string = json.dumps(string_content, ensure_ascii=False)\n",
+    "                    result.append(escaped_string)\n",
+    "                    i = j + 1\n",
+    "                else:\n",
+    "                    result.append(char)\n",
+    "                    i += 1\n",
+    "            else:\n",
+    "                result.append(char)\n",
+    "                i += 1\n",
+    "        \n",
+    "        return ''.join(result)\n",
+    "    \n",
+    "    # Apply quote conversion\n",
+    "    value_segment = convert_quotes(value_segment)\n",
+    "    \n",
+    "    return value_segment\n",
     "\n",
     "def detect_file_structure(content):\n",
     "    \"\"\"\n",
@@ -1073,6 +1080,124 @@
     "                        cleaned_value = value_part.replace(\"\\\\'\", \"'\")\n",
     "                        lang_parts[var_name][\"items\"][key] = cleaned_value\n",
     "                \n",
+    "                # Handle direct array assignments like HI = [...] and HIN = [...]\n",
+    "                elif ' = [' in line and line.endswith('];'):\n",
+    "                    equals_pos = line.find(' = ')\n",
+    "                    if equals_pos > 0:\n",
+    "                        var_name = line[:equals_pos].strip()\n",
+    "                        \n",
+    "                        # Get the array content INCLUDING the closing bracket\n",
+    "                        array_content = line[equals_pos + 3:].strip()\n",
+    "                        if array_content.endswith('];'):\n",
+    "                            array_content = array_content[:-1]  # Remove only the semicolon, keep the bracket\n",
+    "                        \n",
+    "                        # Debug: print the original content\n",
+    "                        if var_name in ['HI', 'HIN']:\n",
+    "                            print(f\"Debug: Parsing {var_name} array on line {line_num}\")\n",
+    "                            print(f\"Original content: {array_content[:100]}...\")\n",
+    "                        \n",
+    "                        # Sanitize and parse the array\n",
+    "                        sanitized_array = sanitize_value_segment(array_content)\n",
+    "                        \n",
+    "                        # Debug: print sanitized content\n",
+    "                        if var_name in ['HI', 'HIN']:\n",
+    "                            print(f\"Sanitized content: {sanitized_array[:100]}...\")\n",
+    "                        \n",
+    "                        try:\n",
+    "                            # Always try to parse as JSON array\n",
+    "                            if not sanitized_array.startswith('['):\n",
+    "                                sanitized_array = '[' + sanitized_array + ']'\n",
+    "                            \n",
+    "                            # Debug: check array structure\n",
+    "                            if var_name in ['HI', 'HIN']:\n",
+    "                                print(f\"Array structure check for {var_name}:\")\n",
+    "                                print(f\"  Starts with '[': {sanitized_array.startswith('[')}\")\n",
+    "                                print(f\"  Ends with ']': {sanitized_array.endswith(']')}\")\n",
+    "                                print(f\"  Array length: {len(sanitized_array)}\")\n",
+    "                                # Count brackets\n",
+    "                                open_brackets = sanitized_array.count('[')\n",
+    "                                close_brackets = sanitized_array.count(']')\n",
+    "                                print(f\"  Open brackets: {open_brackets}, Close brackets: {close_brackets}\")\n",
+    "                            \n",
+    "                            parsed_array = json.loads(sanitized_array)\n",
+    "                            lang_parts[var_name] = {\"value\": \"array\", \"items\": parsed_array}\n",
+    "                            \n",
+    "                            if var_name in ['HI', 'HIN']:\n",
+    "                                print(f\"✓ Successfully parsed {var_name} with {len(parsed_array)} items\")\n",
+    "                                \n",
+    "                        except json.JSONDecodeError as e:\n",
+    "                            # Enhanced error handling with more debugging\n",
+    "                            if var_name in ['HI', 'HIN']:\n",
+    "                                print(f\"JSON Error for {var_name}: {e}\")\n",
+    "                                error_pos = e.pos if hasattr(e, 'pos') else 0\n",
+    "                                # Show context around the error\n",
+    "                                start = max(0, error_pos - 100)\n",
+    "                                end = min(len(sanitized_array), error_pos + 100)\n",
+    "                                context = sanitized_array[start:end]\n",
+    "                                print(f\"Error context around position {error_pos}: ...{context}...\")\n",
+    "                                print(f\"Failed content: {sanitized_array[:200]}...\")\n",
+    "                            \n",
+    "                            # Try a different approach: split and parse individual items\n",
+    "                            try:\n",
+    "                                # Remove outer brackets and split by objects\n",
+    "                                if sanitized_array.startswith('[') and sanitized_array.endswith(']'):\n",
+    "                                    inner_content = sanitized_array[1:-1].strip()\n",
+    "                                else:\n",
+    "                                    inner_content = sanitized_array\n",
+    "                                \n",
+    "                                # Manual parsing for complex arrays\n",
+    "                                items = []\n",
+    "                                current_item = \"\"\n",
+    "                                brace_count = 0\n",
+    "                                bracket_count = 0\n",
+    "                                in_string = False\n",
+    "                                \n",
+    "                                for char in inner_content:\n",
+    "                                    if char == '\"' and (len(current_item) == 0 or current_item[-1] != '\\\\'):\n",
+    "                                        in_string = not in_string\n",
+    "                                    elif not in_string:\n",
+    "                                        if char == '{':\n",
+    "                                            brace_count += 1\n",
+    "                                        elif char == '}':\n",
+    "                                            brace_count -= 1\n",
+    "                                        elif char == '[':\n",
+    "                                            bracket_count += 1\n",
+    "                                        elif char == ']':\n",
+    "                                            bracket_count -= 1\n",
+    "                                        elif char == ',' and brace_count == 0 and bracket_count == 0:\n",
+    "                                            # End of item\n",
+    "                                            if current_item.strip():\n",
+    "                                                try:\n",
+    "                                                    item_json = json.loads(current_item.strip())\n",
+    "                                                    items.append(item_json)\n",
+    "                                                except:\n",
+    "                                                    pass\n",
+    "                                            current_item = \"\"\n",
+    "                                            continue\n",
+    "                                    \n",
+    "                                    current_item += char\n",
+    "                                \n",
+    "                                # Don't forget the last item\n",
+    "                                if current_item.strip():\n",
+    "                                    try:\n",
+    "                                        item_json = json.loads(current_item.strip())\n",
+    "                                        items.append(item_json)\n",
+    "                                    except:\n",
+    "                                        pass\n",
+    "                                \n",
+    "                                if items:\n",
+    "                                    lang_parts[var_name] = {\"value\": \"array\", \"items\": items}\n",
+    "                                    if var_name in ['HI', 'HIN']:\n",
+    "                                        print(f\"✓ Manual parsing succeeded for {var_name} with {len(items)} items\")\n",
+    "                                else:\n",
+    "                                    raise Exception(\"No items parsed\")\n",
+    "                                    \n",
+    "                            except Exception as e2:\n",
+    "                                # Final fallback to string\n",
+    "                                if var_name in ['HI', 'HIN']:\n",
+    "                                    print(f\"Warning: All parsing failed for {var_name}: {e2}\")\n",
+    "                                lang_parts[var_name] = {\"value\": \"array\", \"items\": array_content}\n",
+    "                \n",
     "            except Exception as e:\n",
     "                print(f\"Error parsing line {line_num}: {line}\")\n",
     "                print(f\"Error: {e}\")\n",
@@ -1144,6 +1269,64 @@
     "    stats['parsing_success_rate'] = (parsed_items / total_items * 100) if total_items > 0 else 100.0\n",
     "    \n",
     "    return stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "264af3a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Testing improved GENERIC ActionScript parsing...\n",
+      "Parsing HINT file: swf_files\\hints_fr_1254.as\n",
+      "Debug: Parsing HI array on line 8\n",
+      "Original content: [{'n': 'Temple Xélor', 'c': 1, 'g': 50, 'm': 50}, {'n': 'Temple Feca', 'c': 1, 'g': 10, 'm': 177}, {...\n",
+      "Sanitized content: [{\"n\": \"Temple Xélor\", \"c\": 1, \"g\": 50, \"m\": 50}, {\"n\": \"Temple Feca\", \"c\": 1, \"g\": 10, \"m\": 177}, {...\n",
+      "Array structure check for HI:\n",
+      "  Starts with '[': True\n",
+      "  Ends with ']': True\n",
+      "  Array length: 21209\n",
+      "  Open brackets: 1, Close brackets: 1\n",
+      "✓ Successfully parsed HI with 362 items\n",
+      "Debug: Parsing HIN array on line 9\n",
+      "Original content: [{'x': 4, 'y': 1, 'h': [{'n': 'Bibliothèque', 'c': 4, 'g': 417, 'm': 51}, {'n': 'Attitude ' + '\"' + ...\n",
+      "Sanitized content: [{\"x\": 4, \"y\": 1, \"h\": [{\"n\": \"Bibliothèque\", \"c\": 4, \"g\": 417, \"m\": 51}, {\"n\": \"Attitude \\\"Faire si...\n",
+      "Array structure check for HIN:\n",
+      "  Starts with '[': True\n",
+      "  Ends with ']': True\n",
+      "  Array length: 30405\n",
+      "  Open brackets: 336, Close brackets: 336\n",
+      "✓ Successfully parsed HIN with 335 items\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Single test case for improved generic parser\n",
+    "\n",
+    "\n",
+    "print(\"🧪 Testing improved GENERIC ActionScript parsing...\")\n",
+    "hint_as_file_path = Path(\"swf_files/hints_fr_1254.as\")\n",
+    "\n",
+    "if hint_as_file_path.exists():\n",
+    "    print(f\"Parsing HINT file: {hint_as_file_path}\")\n",
+    "\n",
+    "    # Parse the ActionScript file\n",
+    "    lang_parts = parse_actionscript_file_generic(hint_as_file_path)\n",
+    "\n",
+    "    if lang_parts:\n",
+    "        \n",
+    "        # Step 3: Save JSON to output directory\n",
+    "        json_filename = hint_as_file_path.stem + '.json'\n",
+    "        json_output_path = output_path / json_filename\n",
+    "        \n",
+    "        with open(json_output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(lang_parts, f, indent=2, ensure_ascii=False)\n",
+    "    else:\n",
+    "        print(\"❌ Failed to parse file\")"
    ]
   },
   {
