fixed parsing of lang_ as files

--- a/QuestDataFlow_v2.ipynb
+++ b/QuestDataFlow_v2.ipynb
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "234b9664",
    "metadata": {},
    "outputs": [],
@@ -1738,6 +1738,31 @@
     "                                    print(f\"Warning: All parsing failed for {var_name}: {e2}\")\n",
     "                                lang_parts[var_name] = {\"value\": \"array\", \"items\": array_content}\n",
     "                \n",
+    "                # Handle simple string assignments like ACCEPT = 'Accepter';\n",
+    "                # These are standalone variable assignments, not part of any object/array structure\n",
+    "                # Pattern: VAR_NAME = 'string value';\n",
+    "                elif ' = \\'' in line and line.endswith('\\';') and '[' not in line and '.' not in line.split(' = ')[0]:\n",
+    "                    equals_pos = line.find(' = \\'')\n",
+    "                    if equals_pos > 0:\n",
+    "                        var_name = line[:equals_pos].strip()\n",
+    "                        \n",
+    "                        # Validate variable name (alphanumeric + underscores, typically uppercase)\n",
+    "                        if var_name and (var_name.replace('_', '').replace('0', '').replace('1', '').replace('2', '').replace('3', '').replace('4', '').replace('5', '').replace('6', '').replace('7', '').replace('8', '').replace('9', '').isalnum()):\n",
+    "                            # Extract the string value\n",
+    "                            value_start = equals_pos + 4  # After \" = '\"\n",
+    "                            value_end = line.rfind('\\';')\n",
+    "                            value_part = line[value_start:value_end]\n",
+    "                            \n",
+    "                            # Handle escaped quotes in the string\n",
+    "                            cleaned_value = value_part.replace(\"\\\\'\", \"'\")\n",
+    "                            \n",
+    "                            # Ensure the LANG structure exists to hold these raw strings\n",
+    "                            if 'LANG' not in lang_parts:\n",
+    "                                lang_parts['LANG'] = {\"value\": \"new Object()\", \"items\": {}}\n",
+    "                            \n",
+    "                            # Store the raw string in the items dict with the variable name as key\n",
+    "                            lang_parts['LANG']['items'][var_name] = cleaned_value\n",
+    "                \n",
     "            except Exception as e:\n",
     "                print(f\"Error parsing line {line_num}: {line}\")\n",
     "                print(f\"Error: {e}\")\n",
@@ -2145,6 +2170,135 @@
     "print(f\"'] = {{' in line: {'] = {' in test_line}\")\n",
     "print(f\"line.endswith('}}};'): {test_line.endswith('};')}\")\n",
     "print(f\"All conditions: {'].m[' in test_line and '] = {' in test_line and test_line.endswith('};')}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31b05363",
+   "metadata": {},
+   "source": [
+    "## Test: LANG File with Raw String Assignments\n",
+    "\n",
+    "The `lang_*.as` files contain raw string assignments at the beginning of the file, before any `C = new Object();` declaration. These look like:\n",
+    "\n",
+    "```actionscript\n",
+    "A_ASK_MARRIAGE_B = '%1 acceptez-vous d\\'épouser %2 ?';\n",
+    "A_ATTACK_B = '<b>%1</b> agresse <b>%2</b>';\n",
+    "ACCEPT = 'Accepter';\n",
+    "```\n",
+    "\n",
+    "These are now captured in a `LANG` section with an `items` dictionary using the variable names as keys:\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "  \"LANG\": {\n",
+    "    \"value\": \"new Object()\",\n",
+    "    \"items\": {\n",
+    "      \"A_ASK_MARRIAGE_B\": \"%1 acceptez-vous d'épouser %2 ?\",\n",
+    "      \"A_ATTACK_B\": \"<b>%1</b> agresse <b>%2</b>\",\n",
+    "      \"ACCEPT\": \"Accepter\"\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "85d56089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Testing LANG file with raw string assignments...\n",
+      "Parsing LANG file: swf_files\\lang_fr_1254.as\n",
+      "✅ Found LANG section with 2632 raw string items\n",
+      "\n",
+      "Sample items from LANG section:\n",
+      "  1. A_ASK_MARRIAGE_B = '%1 acceptez-vous d'épouser %2 ?'\n",
+      "  2. A_ATTACK_B = '<b>%1</b> agresse <b>%2</b>'\n",
+      "  3. ACCEPT = 'Accepter'\n",
+      "  4. ACCESS_DENIED = 'Identifiant ou mot de passe incorrect.'\n",
+      "  5. ACCESS_DENIED_AUTHENTICATOR = 'L'Authenticator protège ce compte Ankama\\n1. Rendez-vous sur...'\n",
+      "  6. ACCESS_DENIED_MINICLIP = 'Connexion refusée.\\nNom de compte ou mot de passe incorrect....'\n",
+      "  7. ACCOUNT = 'Identifiant'\n",
+      "  8. ACCOUNT_INFO = 'Informations du compte'\n",
+      "  9. A_CHALENGE_B = '<b>%1</b> défie <b>%2</b>'\n",
+      "  10. A_CHALENGE_YOU = '<b>%1</b> te défie.\\nAcceptes-tu ?'\n",
+      "  ... and 2622 more items\n",
+      "\n",
+      "Verifying expected keys:\n",
+      "  ✅ A_ASK_MARRIAGE_B: '%1 acceptez-vous d'épouser %2 ?'\n",
+      "  ✅ A_ATTACK_B: '<b>%1</b> agresse <b>%2</b>'\n",
+      "  ✅ ACCEPT: 'Accepter'\n",
+      "  ✅ ACCESS_DENIED: 'Identifiant ou mot de passe incorrect.'\n",
+      "\n",
+      "📋 Other sections found: C, C.CHAT_FILTERS, C.FREE_COMMUNITIES, C.INCARNAM_CLASS_MAP, C.LANGUAGES_LIST, C.SERVER_NAME, C.SERVER_PORT, C.TEMPORIS_2_UI_COMPONENTS, C.TEMPORIS_3_UI_COMPONENTS, C.XTRA_FILE\n",
+      "    ... and 4 more\n",
+      "\n",
+      "💾 Saved parsed output to: output\\lang_fr_1254.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test parsing of lang_fr_1254.as file with raw string assignments\n",
+    "print(\"🧪 Testing LANG file with raw string assignments...\")\n",
+    "lang_as_file_path = Path('swf_files/lang_fr_1254.as')\n",
+    "\n",
+    "if lang_as_file_path.exists():\n",
+    "    print(f\"Parsing LANG file: {lang_as_file_path}\")\n",
+    "    \n",
+    "    # Parse the ActionScript file\n",
+    "    lang_parts = parse_actionscript_file_generic(lang_as_file_path)\n",
+    "    \n",
+    "    if lang_parts:\n",
+    "        # Check if LANG section exists with items\n",
+    "        if 'LANG' in lang_parts and 'items' in lang_parts['LANG']:\n",
+    "            lang_items = lang_parts['LANG']['items']\n",
+    "            print(f\"✅ Found LANG section with {len(lang_items)} raw string items\")\n",
+    "            \n",
+    "            # Show first 10 items as sample\n",
+    "            print(\"\\nSample items from LANG section:\")\n",
+    "            for i, (key, value) in enumerate(list(lang_items.items())[:10], 1):\n",
+    "                # Truncate long values for display\n",
+    "                display_value = value[:60] + '...' if len(value) > 60 else value\n",
+    "                print(f\"  {i}. {key} = '{display_value}'\")\n",
+    "            \n",
+    "            if len(lang_items) > 10:\n",
+    "                print(f\"  ... and {len(lang_items) - 10} more items\")\n",
+    "            \n",
+    "            # Check for expected keys\n",
+    "            expected_keys = ['A_ASK_MARRIAGE_B', 'A_ATTACK_B', 'ACCEPT', 'ACCESS_DENIED']\n",
+    "            \n",
+    "            print(\"\\nVerifying expected keys:\")\n",
+    "            for key in expected_keys:\n",
+    "                if key in lang_items:\n",
+    "                    value = lang_items[key][:50] + '...' if len(lang_items[key]) > 50 else lang_items[key]\n",
+    "                    print(f\"  ✅ {key}: '{value}'\")\n",
+    "                else:\n",
+    "                    print(f\"  ❌ {key}: NOT FOUND\")\n",
+    "        else:\n",
+    "            print(\"❌ LANG section not found in parsed output\")\n",
+    "        \n",
+    "        # Check other sections too\n",
+    "        other_sections = [k for k in lang_parts.keys() if k != 'LANG' and not k.startswith('_')]\n",
+    "        if other_sections:\n",
+    "            print(f\"\\n📋 Other sections found: {', '.join(other_sections[:10])}\")\n",
+    "            if len(other_sections) > 10:\n",
+    "                print(f\"    ... and {len(other_sections) - 10} more\")\n",
+    "        \n",
+    "        # Save to JSON for inspection\n",
+    "        output_json_path = output_path / (lang_as_file_path.stem + '.json')\n",
+    "        with open(output_json_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(lang_parts, f, ensure_ascii=False, indent=2)\n",
+    "        print(f\"\\n💾 Saved parsed output to: {output_json_path}\")\n",
+    "    else:\n",
+    "        print(\"❌ Failed to parse file\")\n",
+    "else:\n",
+    "    print(f\"❌ ActionScript file not found: {lang_as_file_path}\")"
    ]
   },
   {
