--- a/RETRO_shroogleDB.ipynb
+++ b/RETRO_shroogleDB.ipynb
@@ -2827,6 +2827,31 @@
     "print(f\"🌍 Languages: {', '.join(LANGUAGES)}\")\n",
     "print(f\"📦 File size: {OUTPUT_FILE.stat().st_size / (1024 * 1024):.2f} MB\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "993c9299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Exporting to Excel format...\n",
+      "✓ Successfully exported to output\\multilingual_database.xlsx\n",
+      "✓ Successfully exported to output\\multilingual_database.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load json output with pandas and export in excel\n",
+    "print(\"\\nExporting to Excel format...\")\n",
+    "excel_file = OUTPUT_FOLDER / \"multilingual_database.xlsx\"\n",
+    "df_final.to_excel(excel_file, index=False)\n",
+    "print(f\"✓ Successfully exported to {excel_file}\")"
+   ]
   }
  ],
  "metadata": {
