working multilingual l18n db for deployment test in RV

--- a/QuestDataFlow_v2.ipynb
+++ b/QuestDataFlow_v2.ipynb
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "85d56089",
    "metadata": {},
    "outputs": [
@@ -2214,39 +2214,39 @@
      "output_type": "stream",
      "text": [
       "🧪 Testing LANG file with raw string assignments...\n",
-      "Parsing LANG file: swf_files\\lang_fr_1254.as\n",
-      "✅ Found LANG section with 2632 raw string items\n",
+      "Parsing LANG file: swf_files\\lang_pt_1254.as\n",
+      "✅ Found LANG section with 2635 raw string items\n",
       "\n",
       "Sample items from LANG section:\n",
-      "  1. A_ASK_MARRIAGE_B = '%1 acceptez-vous d'épouser %2 ?'\n",
-      "  2. A_ATTACK_B = '<b>%1</b> agresse <b>%2</b>'\n",
-      "  3. ACCEPT = 'Accepter'\n",
-      "  4. ACCESS_DENIED = 'Identifiant ou mot de passe incorrect.'\n",
-      "  5. ACCESS_DENIED_AUTHENTICATOR = 'L'Authenticator protège ce compte Ankama\\n1. Rendez-vous sur...'\n",
-      "  6. ACCESS_DENIED_MINICLIP = 'Connexion refusée.\\nNom de compte ou mot de passe incorrect....'\n",
-      "  7. ACCOUNT = 'Identifiant'\n",
-      "  8. ACCOUNT_INFO = 'Informations du compte'\n",
-      "  9. A_CHALENGE_B = '<b>%1</b> défie <b>%2</b>'\n",
-      "  10. A_CHALENGE_YOU = '<b>%1</b> te défie.\\nAcceptes-tu ?'\n",
-      "  ... and 2622 more items\n",
+      "  1. A_ASK_MARRIAGE_B = '%1, você deseja pedir a mão de %2 em casamento?'\n",
+      "  2. A_ATTACK_B = '<b>%1</b> agride <b>%2</b>'\n",
+      "  3. ACCEPT = 'Aceitar'\n",
+      "  4. ACCESS_DENIED = 'Login ou senha incorretos.'\n",
+      "  5. ACCESS_DENIED_AUTHENTICATOR = 'Esta conta está protegida pelo Authenticator\\n1. Acesse o ap...'\n",
+      "  6. ACCESS_DENIED_MINICLIP = 'Acesso negado. ID ou senha inválidos.'\n",
+      "  7. ACCOUNT = 'Credencial'\n",
+      "  8. ACCOUNT_INFO = 'Detalhes da conta'\n",
+      "  9. A_CHALENGE_B = '<b>%1</b> desafia <b>%2</b>'\n",
+      "  10. A_CHALENGE_YOU = '<b>%1</b> te desafia. Você aceita?'\n",
+      "  ... and 2625 more items\n",
       "\n",
       "Verifying expected keys:\n",
-      "  ✅ A_ASK_MARRIAGE_B: '%1 acceptez-vous d'épouser %2 ?'\n",
-      "  ✅ A_ATTACK_B: '<b>%1</b> agresse <b>%2</b>'\n",
-      "  ✅ ACCEPT: 'Accepter'\n",
-      "  ✅ ACCESS_DENIED: 'Identifiant ou mot de passe incorrect.'\n",
+      "  ✅ A_ASK_MARRIAGE_B: '%1, você deseja pedir a mão de %2 em casamento?'\n",
+      "  ✅ A_ATTACK_B: '<b>%1</b> agride <b>%2</b>'\n",
+      "  ✅ ACCEPT: 'Aceitar'\n",
+      "  ✅ ACCESS_DENIED: 'Login ou senha incorretos.'\n",
       "\n",
       "📋 Other sections found: C, C.CHAT_FILTERS, C.FREE_COMMUNITIES, C.INCARNAM_CLASS_MAP, C.LANGUAGES_LIST, C.SERVER_NAME, C.SERVER_PORT, C.TEMPORIS_2_UI_COMPONENTS, C.TEMPORIS_3_UI_COMPONENTS, C.XTRA_FILE\n",
       "    ... and 4 more\n",
       "\n",
-      "💾 Saved parsed output to: output\\lang_fr_1254.json\n"
+      "💾 Saved parsed output to: output\\lang_pt_1254.json\n"
      ]
     }
    ],
    "source": [
     "# Test parsing of lang_fr_1254.as file with raw string assignments\n",
     "print(\"🧪 Testing LANG file with raw string assignments...\")\n",
-    "lang_as_file_path = Path('swf_files/lang_fr_1254.as')\n",
+    "lang_as_file_path = Path('swf_files/lang_pt_1254.as')\n",
     "\n",
     "if lang_as_file_path.exists():\n",
     "    print(f\"Parsing LANG file: {lang_as_file_path}\")\n",
@@ -2299,6 +2299,43 @@
     "        print(\"❌ Failed to parse file\")\n",
     "else:\n",
     "    print(f\"❌ ActionScript file not found: {lang_as_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "19b39466",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Testing improved GENERIC ActionScript parsing...\n",
+      "Parsing KB file: swf_files\\kb_pt_1248.as\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"🧪 Testing improved GENERIC ActionScript parsing...\")\n",
+    "kb_as_file_path = Path(\"swf_files/kb_pt_1248.as\")\n",
+    "\n",
+    "if kb_as_file_path.exists():\n",
+    "    print(f\"Parsing KB file: {kb_as_file_path}\")\n",
+    "\n",
+    "    # Parse the ActionScript file\n",
+    "    lang_parts = parse_actionscript_file_generic(kb_as_file_path)\n",
+    "\n",
+    "    if lang_parts:\n",
+    "        \n",
+    "        # Step 3: Save JSON to output directory\n",
+    "        json_filename = kb_as_file_path.stem + '.json'\n",
+    "        json_output_path = output_path / json_filename\n",
+    "        \n",
+    "        with open(json_output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(lang_parts, f, indent=2, ensure_ascii=False)\n",
+    "    else:\n",
+    "        print(\"❌ Failed to parse file\")"
    ]
   },
   {
@@ -2512,6 +2549,26 @@
    ],
    "source": [
     "# Test the generic implementation\n",
+    "\n",
+    "print(\"🧪 Testing improved GENERIC ActionScript parsing...\")\n",
+    "kb_as_file_path = Path(\"swf_files/kb_pt_1248.as\")\n",
+    "\n",
+    "if kb_as_file_path.exists():\n",
+    "    print(f\"Parsing KB file: {kb_as_file_path}\")\n",
+    "\n",
+    "    # Parse the ActionScript file\n",
+    "    lang_parts = parse_actionscript_file_generic(kb_as_file_path)\n",
+    "\n",
+    "    if lang_parts:\n",
+    "        \n",
+    "        # Step 3: Save JSON to output directory\n",
+    "        json_filename = kb_as_file_path.stem + '.json'\n",
+    "        json_output_path = output_path / json_filename\n",
+    "        \n",
+    "        with open(json_output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(lang_parts, f, indent=2, ensure_ascii=False)\n",
+    "    else:\n",
+    "        print(\"❌ Failed to parse file\")\n",
     "\n",
     "# Test: timezones_fr_1248.as - Month names array parsing\n",
     "timezones_as_file_path = Path('swf_files/timezones_fr_1248.as')\n",
